--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 "cancelar":"",
 "linktelegram":"https://t.me/jatodoshackersgrupo",
 "usuario":"Jato25k",
-"senha":"873828",
+"senha":"30901525",
 "userletramaior":"JATO25K",
 "vendedor":"JATO",
 "vencimento":"19-01-2022",
-"toast":"Usuário: Jato25k\nSenha: 873828",
-"versaomenu":"\nEscolha uma versão do Injector\nNão use na principal!!!!!!\n Do not use the primary account !!!!!",
+"toast":"",
+"versaomenu":"\nEscolha uma versão do Injector.",
 "criador":" Criado Por Jato v1.68.X",
 "wallhackze":" WallHack V4 (Eliminando)",
 "espsnomes":" ESP Name",
