--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 [
 {
 "version":"Aviso",
-"menu":"INCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!\n\nO HS Peito irá voltar na v11 amanhã! fiquem tranquilo.",
+"menu":"Bem Vindo gente!\nO Apk irá abrir quando o vídeo começar. por favor espere.",
 
-"ok":"ok",
+"ok":"",
 "link":"https://youtube.com/c/JATODOSHACKERSOFICIAL",
 "link2":"https://youtube.com/channel/UC9uInKpZ1B_NzRqqGqzsCfA",
 "linkfriend":"https://youtube.com/c/JaumHTS",
 "nomedocanal":"FaNt MoD",
-"cancelar":"",
+"cancelar":"ok",
 "linktelegram":"https://t.me/jatodoshackersgrupo",
 "usuario":"Jato25k",
 "senha":"30901525",
