--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 "ok":"ok",
 "link":"https://youtube.com/c/JATODOSHACKERSOFICIAL",
 "link2":"https://youtube.com/channel/UC9uInKpZ1B_NzRqqGqzsCfA",
-"linkfriend":"https://youtube.com/c/JaumHTS",
-"nomedocanal":"FaNt MoD",
+"linkfriend":"https://youtu.be/cvtjJl-TiFc",
+"nomedocanal":"FaNt MoD (Se inscreve lá galera)",
 "cancelar":"",
 "linktelegram":"https://t.me/jatodoshackersgrupo",
 "usuario":"Jato25k",
