--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 "ok":"ok",
 "link":"https://youtube.com/c/JATODOSHACKERSOFICIAL",
-"link2":"https://youtube.com/channel/UC9uInKpZ1B_NzRqqGqzsCfA",
+"link2":"https://youtu.be/DY4N7ngOJz8",
 "linkfriend":"https://youtu.be/cvtjJl-TiFc",
 "nomedocanal":"FaNt MoD (Se inscreve lá galera)",
 "cancelar":"",
