--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 "ok":"ok",
 "link":"https://youtube.com/c/JATODOSHACKERSOFICIAL",
-"link2":"https://youtu.be/DY4N7ngOJz8",
-"linkfriend":"https://youtu.be/cvtjJl-TiFc",
+"link2":"https://youtube.com/channel/UC9uInKpZ1B_NzRqqGqzsCfA",
+"linkfriend":"https://youtu.be/DY4N7ngOJz8",
 "nomedocanal":"FaNt MoD (Se inscreve lá galera)",
 "cancelar":"",
 "linktelegram":"https://t.me/jatodoshackersgrupo",
