--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 {
 "version":"Aviso",
-"menu":"INCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!\n\nDicas para não levar ban: \nUse apenas para Sala Personalizada\nLimpe Cachê sempre que acaba a partida.",
+"menu":"INCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!\n\nDicas para não levar ban: \nUse apenas para Sala Personalizada\nLimpe Cachê sempre que acaba a partida.\nNovidade boa na v12:\nDesbanir contas Testado por Jato Dos hackers",
 
 "ok":"ok",
 "link":"https://youtube.com/c/JATODOSHACKERSOFICIAL",
