--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 [
 {
-"version":"Aviso",
-"menu":"INCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!\n\nDicas para não levar ban: \nUse apenas para Sala Personalizada\nLimpe Cachê sempre que acaba a partida.\nNovidade boa na v12:\nDesbanir contas Testado por Jato Dos hackers",
+"version":"New Update",
+"menu":"Atualize a versão do regedit para a v12. para desbanir suas conta!\nNovidade na v12:\nDesbanir contas Testado por Jato Dos hackers",
 
-"ok":"ok",
+"ok":"",
 "link":"https://youtube.com/c/JATODOSHACKERSOFICIAL",
 "link2":"https://youtube.com/channel/UC9uInKpZ1B_NzRqqGqzsCfA",
 "linkfriend":"https://youtu.be/DY4N7ngOJz8",
 "nomedocanal":"FaNt MoD (Se inscreve lá galera)",
-"cancelar":"",
+"cancelar":"ok",
 "linktelegram":"https://t.me/jatodoshackersgrupo",
 "usuario":"Jato25k",
 "senha":"30901525",
