--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 [
 {
 "version":"New Update",
-"menu":"Atualize a versão do regedit para a v12. para desbanir suas conta!\nNovidade na v12:\nDesbanir contas Testado por Jato Dos hackers",
+"menu":"INSCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!\n\nSe as funções para de funcionar, atualize o apk para a versão recente.",
 
-"ok":"",
+"ok":"ok",
 "link":"https://youtube.com/c/JATODOSHACKERSOFICIAL",
 "link2":"https://youtube.com/channel/UC9uInKpZ1B_NzRqqGqzsCfA",
 "linkfriend":"https://youtu.be/DY4N7ngOJz8",
 "nomedocanal":"FaNt MoD (Se inscreve lá galera)",
-"cancelar":"ok",
+"cancelar":"",
 "linktelegram":"https://t.me/jatodoshackersgrupo",
 "usuario":"Jato25k",
 "senha":"30901525",
