--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 [
 {
 "version":"New Update",
-"menu":"INSCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!\n\nSe as funções para de funcionar, atualize o apk para a versão recente.",
+"menu":"Atualize o apk para a versão recente.",
 
-"ok":"ok",
+"ok":"",
 "link":"https://youtube.com/c/JATODOSHACKERSOFICIAL",
 "link2":"https://youtube.com/channel/UC9uInKpZ1B_NzRqqGqzsCfA",
 "linkfriend":"https://youtu.be/DY4N7ngOJz8",
 "nomedocanal":"FaNt MoD (Se inscreve lá galera)",
-"cancelar":"",
+"cancelar":"ok",
 "linktelegram":"https://t.me/jatodoshackersgrupo",
 "usuario":"Jato25k",
 "senha":"30901525",
